[package]
name = "flatconvert-rs"
version = "0.0.1"
license = "MIT"
authors = ["mean00 <fixounet@free.fr>"]
edition = "2018"

[profile.dev.package."*"]
opt-level = 'z'

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
debug = 0


[dependencies]
freetype-rs = { version = "0.1.2"}
clap = { version = "3.1.18",features = ["derive"]}
